delay continuous play + nowrap on play

--- a/app/views/practices/play.html.erb
+++ b/app/views/practices/play.html.erb
@@ -54,6 +54,7 @@
       seconds = parseInt($(nextSlideElement).attr('seconds')) || 1;
       Practices.resetCountdown(minutes, seconds);
     },
+    nowrap: true,
     fit: 1,
     width: '99.9%'
   });
