style on practices list

--- a/app/views/practices/_practice.html.erb
+++ b/app/views/practices/_practice.html.erb
@@ -1,4 +1,4 @@
-<li id='practice_<%= practice.id %>'>
+<li id='practice_<%= practice.id %>' class="practice">
   <h3><%= practice.name %></h3>
   <p><%= practice.description %></p>
   <ul class='actions'>
