--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -1,3 +1,22 @@
+#practices {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+#practices .practice {
+  padding: 15px;
+  margin: 0;
+  background: #fff;
+  border: solid 1px #ccc;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+}
+
+.practice h3 {
+  margin-top: 0;
+}
+
 #quicksearch {
 
 }
