--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,8 +59,7 @@
             <%= t('menu.signed_in_as', :email => link_to_function(current_user.email, "$('#edit_profile_dialog').dialog('open');")) %>
             <%= link_to t('menu.sign_out'), destroy_user_session_path %>
           <% else %>
-            <%= link_to_function t('menu.sign_up'), "$('#sign_up_dialog').dialog('open');" %> or
-            <%= link_to_function t('menu.sign_in'), "$('#sign_in_dialog').dialog('open');" %>
+            <%= t('menu.signup_or_siginin', :signup => link_to_function(t('menu.sign_up'), "$('#sign_up_dialog').dialog('open');"), :signin => link_to_function(t('menu.sign_in'), "$('#sign_in_dialog').dialog('open');")) %>
             <%= select :user, :locale, I18n.backend.available_locales.collect {|l| [I18n.t('this_file_language', :locale => l), l.to_s]}, {:selected => I18n.locale.to_s} %>
             <%= javascript_tag do %>
               $('#user_locale').bind('change', function() { window.location = window.location.pathname + "?locale=" + $('#user_locale').val();});
