--- a/app/views/practices/play.html.erb
+++ b/app/views/practices/play.html.erb
@@ -20,7 +20,7 @@
   <% end %>
 </div>
 
-<div id='play_preferences_dialog' title='Play Preferences' style="display:none">
+<div id='play_preferences_dialog' title='<%= t('practices.play.play_preferences_dialog.title') %>' style="display:none">
   <%= render :partial => 'practices/edit_preferences_dialog_form' %>
 </div>
 
