--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,5 @@
-<p>Welcome <%= @resource.email %>!</p>
+<p><%= t('devise.mailer.confirmation_instructions.welcome', :email => @resource.email) %></p>
 
-<p>You can confirm your account through the link below:</p>
+<p><%= t('devise.mailer.confirmation_instructions.text') %></p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
+<p><%= link_to t('devise.mailer.confirmation_instructions.link'), confirmation_url(@resource, :confirmation_token => @resource.confirmation_token) %></p>
