--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,4 +1,4 @@
-<h2>Forgot your password?</h2>
+<h2><%= t('devise.passwords.new.title') %></h2>
 
 <%= form_for(resource_name, resource, :url => password_path(resource_name)) do |f| %>
   <%= f.error_messages %>
@@ -6,7 +6,7 @@
   <p><%= f.label :email %></p>
   <p><%= f.text_field :email %></p>
 
-  <p><%= f.submit "Send me reset password instructions" %></p>
+  <p><%= f.submit t('devise.passwords.new.submit') %></p>
 <% end %>
 
 <%= render :partial => "devise/shared/links" %>
