--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,8 @@
-<%= t('devise.mailer.reset_password_instructions.welcome', :email => @resource.email) %>
+<%= t('devise.mailer_views.reset_password_instructions.welcome', :email => @resource.email) %>
 
-<p><%= t('devise.mailer.reset_password_instructions.text_top') %></p>
+<p><%= t('devise.mailer_views.reset_password_instructions.text_top') %></p>
 
-<p><%= link_to t('devise.mailer.reset_password_instructions.link'), edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
+<p><%= link_to t('devise.mailer_views.reset_password_instructions.link'), edit_password_url(@resource, :reset_password_token => @resource.reset_password_token) %></p>
 
-<p><%= t('devise.mailer.reset_password_instructions.text_bottom1') %></p>
-<p><%= t('devise.mailer.reset_password_instructions.text_bottom2') %></p>
+<p><%= t('devise.mailer_views.reset_password_instructions.text_bottom1') %></p>
+<p><%= t('devise.mailer_views.reset_password_instructions.text_bottom2') %></p>
