--- a/app/views/layouts/mail.html.erb
+++ b/app/views/layouts/mail.html.erb
@@ -1,7 +1,7 @@
-<html style="background-color: #fff; background-image: url('http://sadhana.luisperichon.com.ar/images/linear_bg.png'); background-repeat: repeat-x; background-position: bottom; min-height: 100%;">
-  <body style="font-size: 13px; line-height: 18px; font-family: verdana, arial, helvetica, sans-serif; color: #333; margin-left: 10px; margin-right: 10px;">
-    <div class="ui-widget-header ui-corner-all" id="header" style="-webkit-border-radius: 4px; overflow: hidden; font-weight: bold; color: #ffffff; border: 1px solid #e78f08; height: 62px; -moz-border-radius: 4px; border-radius: 4px; background: #f6a828 url('http://sadhana.luisperichon.com.ar/stylesheets/ui-lightness/images/ui-bg_gloss-wave_35_f6a828_500x100.png') repeat-x 50% 50%;">
-      <a href="http://sadhana.luisperichon.com.ar/" style="color: #ffffff;"><h1 id="logo" style="position: absolute; background: transparent url('http://sadhana.luisperichon.com.ar/images/logo_62.png') no-repeat; text-indent: -9999px; height: 62px; width: 200px; margin: 0;">S&aacute;dhana</h1></a>
+<html style="background-color: #fff;">
+  <body style="font-size: 13px; line-height: 18px; font-family: verdana, arial, sans-serif; color: #333; margin-left: 10px; margin-right: 10px;">
+    <div class="ui-widget-header ui-corner-all" id="header" style="-webkit-border-radius: 4px; overflow: hidden; font-weight: bold; color: #ffffff; border: 1px solid #e78f08; height: 62px; -moz-border-radius: 4px; border-radius: 4px; background: #f6a828;">
+      <a href="http://sadhana.luisperichon.com.ar/" style="color: #ffffff;"><img src='http://sadhana.luisperichon.com.ar/images/logo_62.png' alt='S&aacute;dhana' /></a>
     </div>
 
     <div id="content">
