--- a/public/stylesheets/ui-lightness/jquery-ui-1.8rc3.custom.css
+++ b/public/stylesheets/ui-lightness/jquery-ui-1.8rc3.custom.css
@@ -53,7 +53,7 @@
 .ui-widget-content { border: 1px solid #dddddd; background: #eeeeee url(images/ui-bg_highlight-soft_100_eeeeee_1x100.png) 50% top repeat-x; color: #333333; }
 .ui-widget-content a { color: #333333; }
 .ui-widget-header { border: 1px solid #e78f08; background: #f6a828 url(images/ui-bg_gloss-wave_35_f6a828_500x100.png) 50% 50% repeat-x; color: #ffffff; font-weight: bold; }
-.ui-widget-header a { color: #ffffff; }
+/*.ui-widget-header a { color: #ffffff; }*/
 
 /* Interaction states
 ----------------------------------*/
