translate technique type names

--- a/app/views/admin/technique_types/_form.html.erb
+++ b/app/views/admin/technique_types/_form.html.erb
@@ -4,9 +4,17 @@
     <%= f.label :symbol %><br />
     <%= f.text_field :symbol %>
   </div>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
+  <div class="field" id="name_field">
+    <%= f.fields_for :translations do |ft| %>
+      <%= ft.label :name %> (<%= ft.object.locale %>)<br />
+      <%= ft.text_field :name %>
+
+      <% unless ft.object.new_record? %>
+        <%= ft.check_box '_destroy' %>
+        <%= ft.label '_destroy', 'Remove' %>
+      <% end %><br/>
+    <% end %>
+    <%= link_to_function 'Add translation', "$('#add_translation_link').before('#{ escape_javascript render :partial => 'name_translation_form', :locals => {:f => f, :translation => @technique_type.translations.new}}')", :id => 'add_translation_link' %>
   </div>
   <div class="actions">
     <%= f.submit %>
