fix bug multiline observations

--- a/app/views/practices/_play_practice_technique.html.erb
+++ b/app/views/practices/_play_practice_technique.html.erb
@@ -8,11 +8,11 @@
   <div id='info_panel'>
     <h3><%= Technique.human_attribute_name :description %></h3>
 
-    <p><%= practice_technique.technique.description || t('practices.play_practice_technique.no_description') %></p>
+    <p><%= simple_format practice_technique.technique.description || t('practices.play_practice_technique.no_description') %></p>
 
     <h3><%= PracticeTechnique.human_attribute_name :observations %></h3>
 
-    <p><%= practice_technique.observations || t('practices.play_practice_technique.no_observations') %></p>
+    <p><%= simple_format practice_technique.observations || t('practices.play_practice_technique.no_observations') %></p>
 
     <h3><%= PracticeTechnique.human_attribute_name :associated_techniques %></h3>
     <% if practice_technique.techniques.empty? %>
