--- a/public/stylesheets/practices.css
+++ b/public/stylesheets/practices.css
@@ -6,7 +6,7 @@
 
 #practices .practice {
   padding: 15px;
-  margin: 0;
+  margin: 10px;
   background: #fff;
   border: solid 1px #ccc;
   -moz-border-radius: 5px;
