--- a/app/views/practices/_practice_technique.html.erb
+++ b/app/views/practices/_practice_technique.html.erb
@@ -68,16 +68,16 @@
 
 <%= javascript_tag do %>
   $('#<%= dom_id practice_technique %>').droppable({
-  accept: '.mudra',
-  drop: function(event, ui) {
-    if(ui.draggable.hasClass('ui-draggable')) {
-      // associate new practice technique via ajax
-      $.ajax({
-          type: 'put',
-          data: 'practice_id=<%= practice_technique.practice.id-%>&id=' + $(this).attr('practice_technique_id') + '&practice_technique[add_technique_id]=' + ui.draggable.attr('technique_id'),
-          dataType: 'script',
-          url: '/practices/<%= practice_technique.practice.id-%>/practice_techniques/' + $(this).attr('practice_technique_id')});
+    accept: '.mudra, .manos',
+    drop: function(event, ui) {
+      if(ui.draggable.hasClass('ui-draggable')) {
+        // associate new practice technique via ajax
+        $.ajax({
+            type: 'put',
+            data: 'practice_id=<%= practice_technique.practice.id-%>&id=' + $(this).attr('practice_technique_id') + '&practice_technique[add_technique_id]=' + ui.draggable.attr('technique_id'),
+            dataType: 'script',
+            url: '/practices/<%= practice_technique.practice.id-%>/practice_techniques/' + $(this).attr('practice_technique_id')});
+      }
     }
-  }
-});
+  });
 <% end %>
