--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -25,6 +25,8 @@
   <% end %>
 </ul>
 
+<%= will_paginate @practices, :previous_label => t('actions.previous'), :next_label => t('actions.next') %>
+
 <%= render :partial => 'shared/confirm_dialog' %>
 <%= render :partial => 'shared/new_practice_dialog' %>
 <%= render :partial => 'shared/new_event_dialog' %>
