added Pablo to credits

--- a/app/views/shared/_credits_dialog.html.erb
+++ b/app/views/shared/_credits_dialog.html.erb
@@ -4,6 +4,7 @@
     <li>Maestro Edgardo Caramella</li>
     <li>Instr. Natalia Sanmartin Gil</li>
     <li>Instr. Melina Flores</li>
+    <li>Instr. Pablo Lewin</li>
     <li>Instr. Lucía Gagliardini y toda la Sede Belgrano</li>
   </ul>
 </div>
