--- a/app/views/shared/_credits_dialog.html.erb
+++ b/app/views/shared/_credits_dialog.html.erb
@@ -1,5 +1,5 @@
 <div id='credits_dialog' style='display:none' title='<%= t('shared.credits_dialog.title') %>'>
-  <p>Querémos agradecer a las siguientes personas, que nos ayudaron y nos ayudan todos los dias a hacer que Sádhana sea cada vez mejor:</p>
+  <p><%= t('shared.credits_dialog.text1') %>:</p>
   <ul>
     <li>Maestro Edgardo Caramella</li>
     <li>Instr. Natalia Sanmartin Gil</li>
