--- a/app/views/shared/_credits_dialog.html.erb
+++ b/app/views/shared/_credits_dialog.html.erb
@@ -5,7 +5,7 @@
     <li>Instr. Natalia Sanmartin Gil</li>
     <li>Instr. Melina Flores</li>
     <li>Instr. Pablo Lewin</li>
-    <li>Instr. Lucía Gagliardini y toda la Sede Belgrano</li>
+    <li>Instr. Lucía Gagliardini <%= t('shared.credits_dialog.all_belgrano') %></li>
   </ul>
 </div>
 <%= javascript_tag do %>
