--- a/app/views/practices/_practice.html.erb
+++ b/app/views/practices/_practice.html.erb
@@ -6,7 +6,7 @@
     <li><%= link_to t('actions.edit'), practice, :class => 'small orange awesome' %></li>
     <li><%= link_to t('actions.add_to_calendar'), new_practice_event_path, :class => 'small orange awesome', :id => "#{dom_id practice}_add_to_calendar_link" %>
     <% unless current_user.calendar_subscription_check(current_user.subscription.plan) %>
-      <% javascript_tag do %>
+      <%= javascript_tag do %>
         $('#<%= dom_id practice %>_add_to_calendar_link').click(function() {
           $.ajax({
             type:'get',
