--- a/app/views/practice_events/index.html.erb
+++ b/app/views/practice_events/index.html.erb
@@ -1,3 +1,23 @@
+<ul class='actions'>
+  <li>
+    <%= link_to t('practice_events.index.new_practice_event'), new_practice_event_path, :class => 'blue medium awesome', :id => 'new_practice_event_link'%>
+    <% unless current_user.practices_subscription_check(current_user.subscription.plan) %>
+      <%= javascript_tag do %>
+        $('#new_practice_event_link').click(function() {
+          $.ajax({
+            type:'get',
+            dataType: 'script',
+            url: '/practice_events/new'
+          });
+          return false;
+        });
+      <% end %>
+    <% end %>
+  </li>
+  <li>
+    <%= link_to_function t('practices.index.new_invitation'), "$('#new_invitation_dialog').dialog('open')", :class => 'blue medium awesome' %>
+  </li>
+</ul>
 <div id='calendar'></div>
 <%= javascript_tag do %>
 $('#calendar').fullCalendar({
@@ -36,6 +56,7 @@ $('#calendar').fullCalendar({
   dayNamesShort: [<%= I18n.t("date.abbr_day_names").reject {|month| month == nil}.collect {|month|"'#{month}'"}.join(',') %>]
 });
 <% end %>
+<%= render :partial => 'shared/new_invitation_dialog' %>
 <%= render :partial => 'shared/confirm_dialog' %>
 <%= render :partial => 'shared/new_event_dialog' %>
 <%= render :partial => 'shared/edit_event_dialog' %>
