ask for password on subscription change

--- a/app/views/shared/_subscription_tab.html.erb
+++ b/app/views/shared/_subscription_tab.html.erb
@@ -36,4 +36,8 @@
     </div>
     <div id='transaction_history' title='<%= t('subscriptions.transaction_history.title') %>'></div>
   <% end %>
+  <div class="field">
+    <%= f.label :current_password %> <%= field_help t('shared.edit_profile_dialog.current_password_help') %><br/>
+    <%= f.password_field :current_password, :autocomplete => 'off' %>
+  </div>
 <% end %>
