invite from Windows Live

--- a/app/views/shared/_new_invitation_dialog.html.erb
+++ b/app/views/shared/_new_invitation_dialog.html.erb
@@ -2,7 +2,7 @@
   <%= render :partial => 'devise/invitations/dialog_form' %>
   <a href="/contacts?provider=google" onclick="popUp(this.href,'console',400,400);return false;"target="_blank">Google</a>
   <a href="/contacts?provider=yahoo" onclick="popUp(this.href,'console',515,505);return false;"target="_blank">Yahoo</a>
-  
+  <a href="/contacts?provider=windows_live" onclick="popUp(this.href,'console',550,915);return false;"target="_blank">Windows Live</a>
 </div>
 
 <%= javascript_tag do %>
