--- a/app/views/shared/_new_invitation_dialog.html.erb
+++ b/app/views/shared/_new_invitation_dialog.html.erb
@@ -1,12 +1,14 @@
 <div id='new_invitation_dialog' style='display:none' title='<%= t('shared.new_invitation_dialog.title') %>'>
   <%= render :partial => 'devise/invitations/dialog_form' %>
-  <a href="/contacts?provider=google" onclick="popUp(this.href,'console',400,400);return false;"target="_blank">Google</a>
-  <a href="/contacts?provider=yahoo" onclick="popUp(this.href,'console',515,505);return false;"target="_blank">Yahoo</a>
-  <a href="/contacts?provider=windows_live" onclick="popUp(this.href,'console',550,915);return false;"target="_blank">Windows Live</a>
+  <p> <%= t('shared.new_invitation_dialog.invite_from') %>
+  <a href="/contacts?provider=google" onclick="popUp(this.href,'console',400,400); return false;"target="_blank">Google</a>
+  <a href="/contacts?provider=yahoo" onclick="popUp(this.href,'console',515,505); return false;"target="_blank">Yahoo</a>
+  <a href="/contacts?provider=windows_live" onclick="popUp(this.href,'console',550,915); return false;"target="_blank">Windows Live</a>
+  </p>
 </div>
 
 <%= javascript_tag do %>
-  $('#new_invitation_dialog').dialog({autoOpen: false, modal: true, buttons: {
+  $('#new_invitation_dialog').dialog({autoOpen: false, modal: true, width: 360, buttons: {
     '<%= t('actions.invite') %>': function() {
         $('#new_invitation_dialog form').submit();
       },
